Renamed CTA items to prevent bleed over

--- a/public/widget.css
+++ b/public/widget.css
@@ -51,14 +51,14 @@
     background: linear-gradient(145.9deg, #4EA27D 13.02%, #308282 85.42%);
 }
 
-.kis-widget .widget-cta-block .cta-lead {
+.kis-widget .widget-cta-block .widget-cta-lead {
     display: block;
     font-size: 13px;
     line-height: 16px;
     color: white;
 }
 
-.kis-widget .widget-cta-block .logo {
+.kis-widget .widget-cta-block .widget-cta-logo {
     margin-top: 9px;
     margin-bottom: 38px;
     height: 30px;
@@ -66,11 +66,11 @@
     width: unset;
 }
 
-.kis-widget.horizontal .widget-cta-block .logo {
+.kis-widget.horizontal .widget-cta-block .widget-cta-logo {
     margin-bottom: 10px;
 }
 
-.kis-widget .widget-cta-block .cta {
+.kis-widget .widget-cta-block .widget-cta-button {
     position: relative;
     background-color: white;
     border-radius: 60px;
@@ -82,7 +82,7 @@
     width: 100%;
 }
 
-.kis-widget .widget-cta-block .cta a {
+.kis-widget .widget-cta-block .widget-cta-button a {
     color: #308282;
     text-decoration: none;
     display: block;
